--- a/views/user/emailVerify.ejs
+++ b/views/user/emailVerify.ejs
@@ -43,7 +43,7 @@
                 <div class="resend-container">
                     <a href="#" id="resend-link" >Resend OTP</a>
                     <input type="hidden" id="remainig" value="<%=remainingTime%>">
-                    <span id="timer">60 s</span>
+                    <span id="timer">00 : 00 mins</span>
                 </div>
             </div>
         </div>
