--- a/public/stylesheet/user/cart.css
+++ b/public/stylesheet/user/cart.css
@@ -51,6 +51,18 @@ a{
     }
 }
 
+.cart-items-actions {
+  display: flex;
+  /* gap: 10px; */
+}
+
+.cart-items-actions button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+}
+
 /* Cart Items Section */
 .cart-items {
     flex: 3;
@@ -101,7 +113,7 @@ a{
     border: 1px solid #ccc;
     border-radius: 4px;
     overflow: hidden;
-    max-width: 95px;
+    max-width: 90px;
 }
 
 .quantity-btn {
