--- a/public/stylesheet/user/wishList.css
+++ b/public/stylesheet/user/wishList.css
@@ -119,21 +119,6 @@ a {
     position: relative;
 }
 
-.cart-count {
-    background-color: var(--accent-color);
-    color: white;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    position: absolute;
-    top: -8px;
-    right: -8px;
-}
-
 .main-nav {
     background-color: #f8f9fa;
     border-top: 1px solid var(--border-color);
@@ -201,47 +186,6 @@ a {
     gap: 40px;
     min-height: 600px;
 }
-
-/* Sidebar */
-/* .sidebar {
-    width: 200px;
-    flex-shrink: 0;
-    border: 1px solid var(--border-color);
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: var(--shadow);
-    height: fit-content;
-    min-height: 600px;
-}
-
-.sidebar h3 {
-    margin-bottom: 20px;
-    font-size: 18px;
-    font-weight: 500;
-    color: var(--text-color);
-}
-
-.sidebar ul {
-    list-style: none;
-}
-
-.sidebar ul li {
-    margin-bottom: 10px;
-}
-
-.sidebar ul li a {
-    color: #666;
-    text-decoration: none;
-    font-size: 14px;
-    display: block;
-    padding: 5px 0;
-    transition: color 0.3s;
-}
-
-.sidebar ul li.active a,
-.sidebar ul li a:hover {
-    color: var(--text-color);
-} */
 
 /* Profile Form */
 .profile-form {
@@ -345,15 +289,30 @@ a {
     transition: all 0.3s ease;
 }
 
-/* .wishlist-btn:hover {
-    background-color: var(--accent-color);
-    color: white;
+.wishlist-btn i {
+    color: #ccc; 
+    font-size: 20px;
+    cursor: pointer;
+    transition: color 0.3s ease;
 }
 
-.wishlist-btn.active {
-    background-color: var(--accent-color);
+.wishlist-btn.active i {
+    color: red;
+}
+.wishlist-btn:hover i {
+    color: rgb(255, 90, 90);
+}
+
+.add-to-cart {
+    width: 100%;
+    padding: 10px;
+    /* margin-top: 15px; */
+    background: var(--accent-color);
     color: white;
-} */
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
 .product-info {
     padding: 15px;
