--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -38,9 +38,6 @@
                     <%}%>
                 </div>
                 <div class="top-right">
-                    <button class="filter" onclick="openSalesReportModal()">
-                        <i class="fas fa-chart-line"></i> Sales Report
-                    </button>
                     <select class="filter">
                         <option value="all">Filter</option>
                         <option value="processing">Processing</option>
@@ -71,7 +68,7 @@
                                 <td><%= order.orderId %></td>
                                 <td><%= order.address.name %></td>
                                 <td><%= order.createdOn.toString().split(' ').splice(1,3).join(' ') %></td>
-                                <td>₹<%= order.totalPrice %></td>
+                                <td>₹<%= order.finalAmount %></td>
                                 <td><%= order.paymentMethod %></td>
                                 <td><%= order.status %></td>
                                 <td>
@@ -207,6 +204,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/javascript/admins/order.js"></script> 
-    <%- include('../partials/admins/salesReport' , {orders}) %>
 </body>
 </html>
